--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
 
     //JSON
-    compile 'com.codesnippets4all:quick-json:1.0.4'
+    compile 'com.eclipsesource.minimal-json:minimal-json:0.9.4'
 
 }
