--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,13 @@
         <uses-sdk
             android:minSdkVersion="15"
             android:targetSdkVersion="23" />
-
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.PollListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PollActivity"></activity>
     </application>
 
 </manifest>
