--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:configChanges="orientation"
+        >
         <uses-sdk
             android:minSdkVersion="15"
             android:targetSdkVersion="23" />
 
-        <activity android:name=".activities.PollListActivity">
+        <activity
+            android:name=".activities.PollListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.QuestionActivity"></activity>
+        <activity
+            android:name=".activities.QuestionActivity">
+
+        </activity>
     </application>
 
 </manifest>
